# ffmPlayer

app/: build.gradle
app/src/androidTest/java/com/ldkeji/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  MyPlayer.cpp  MyPlayer.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/ldkeji/myapplication/: Flags.java  MainActivity.java  MyPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ldkeji/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
